--- a/.input/facture_footer.tex
+++ b/.input/facture_footer.tex
@@ -1,3 +1,18 @@
+\usepackage[plainpages=false,
+    pdfcenterwindow=true,
+    pdftoolbar=false,
+    pdfmenubar=false,
+    pdfauthor={\Denomination},
+    pdftitle={Facture \FactureNum\ -- \Denomination},
+    pdfsubject={Facture \FactureNum},
+    pdfkeywords={},
+    pdfproducer={Latex with hyperref},
+    pdfcreator={pdflatex},
+    linkcolor=black,
+    citecolor=black,
+    filecolor=black,
+    urlcolor=black]{hyperref}
+    
 \geometry{verbose,tmargin=4em,bmargin=8em,lmargin=6em,rmargin=6em}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
@@ -9,33 +24,25 @@
 \renewcommand{\headrulewidth}{0pt}
 \cfoot{
 	\small{
-Otto Entre-Preneur\\
-Telephone : +33(0)9 42 42 42 42 ~--~ Site web : http://auto-entrepreneur.fr ~--~ E-mail : otto69@mail.ru\\
-SIREN 042 101 010 ~--~ Code APE 42042}\\
+		\Denomination \\
+		Téléphone: \Telephone ~--~ E-mail : \href{mailto:\Email}{\texttt{\Email}}\\
+		SIRET \Siret ~--~ Code NAF \NAF}\\
     \tiny{
-Dispensé d'immatriculation au registre du commerce et des sociétés et au répertoire des métiers
+			\vspace{1.2em}
+			Dispensé d'immatriculation au registre du commerce et des sociétés et au répertoire des métiers
 	}
 }
 
-
-
 \begin{document}
 
-% Logo de la société
-%\includegraphics{logo.jpg}
 
-% Nom et adresse de la société
-Otto Entre-Preneur \\
-27 rue glacière
-75013 Paris
+\makeheader{}
 
-Facture nº\FactureNum
-
-{\addtolength{\leftskip}{10.5cm} %in ERT
-	\textbf{\ClientNom}	\\
-	\ClientAdresse		\\
-
-} %in ERT
+\hspace*{10.5cm}
+\begin{infoSection}
+	\infoBox{Client}{\textbf{\ClientNom} \\
+	\ClientAdresse}
+\end{infoSection}
 
 \hspace*{10.5cm}
 \FactureLieu, le \today
@@ -45,20 +52,18 @@ Facture nº\FactureNum
 \textbf{Objet : \FactureObjet \\}
 
 \textnormal{\FactureDescr}
-
-%~\\
-\vspace{30mm}
+\vspace{10mm}
 
 \begin{center}
 	\begin{tabular}{lrrr}
-		\textbf{Désignation ~~~~~~}	& \textbf{Prix unitaire}	& \textbf{Quantité}	& \textbf{Montant (EUR)}	\\
-		\hline
+		\textbf{\itemizationHeaderStyle Désignation ~~~~~~}	& \textbf{\itemizationHeaderStyle Prix unitaire}	& \textbf{\itemizationHeaderStyle Quantité}	& \textbf{\itemizationHeaderStyle Montant (EUR)}	\\
+		\midrule
 		\AfficheResultat{}
 	\end{tabular}
 \end{center}
 
 %~\\
-\vspace{50mm}
+\vspace{30mm}
 
 \ifthenelse{\equal{\FactureAcquittee}{oui}}{
 	Facture acquittée.
@@ -68,11 +73,11 @@ Facture nº\FactureNum
 
 	\begin{center}
 		\begin{tabular}{|c c c c|}
-			\hline 	\textbf{Code banque}	& \textbf{Code guichet}	& \textbf{Nº de Compte}		& \textbf{Clé RIB}	\\
-					00000					& 00000		 			& 00000000000				& 00				\\
-			\hline 	\textbf{IBAN Nº}		& \multicolumn{3}{|l|}{ XX00 0000 0000 0000 0000 0000 000 } 		\\
-			\hline 	\textbf{Code BIC}		& \multicolumn{3}{|l|}{ XXXXXXXXXXX } 		\\
-			\hline
+			\midrule 	\itemizationHeaderStyle \textbf{Code banque}	& \itemizationHeaderStyle \textbf{Code guichet}	& \itemizationHeaderStyle \textbf{Nº de Compte}		& \itemizationHeaderStyle \textbf{Clé RIB}	\\
+					\texttt{\CodeBanque}					& \texttt{\CodeGuichet}		 			& \texttt{\NumCompte}				& \texttt{\CleRIB}				\\
+			\midrule 	\itemizationHeaderStyle \textbf{IBAN Nº}		& \multicolumn{3}{|l|}{ \texttt{\IBAN} } 		\\
+			\midrule 	\itemizationHeaderStyle \textbf{Code BIC}		& \multicolumn{3}{|l|}{ \texttt{\BIC} } 		\\
+			\midrule
 		\end{tabular}
 	\end{center}
 
