--- a/.input/facture_footer.tex
+++ b/.input/facture_footer.tex
@@ -2,9 +2,9 @@
     pdfcenterwindow=true,
     pdftoolbar=false,
     pdfmenubar=false,
-    pdfauthor={\Denomination},
-    pdftitle={Facture \FactureNum\ -- \Denomination},
-    pdfsubject={Facture \FactureNum},
+    pdfauthor={\CompanyName},
+    pdftitle={Facture \InvoiceNumber\ -- \CompanyName},
+    pdfsubject={Facture \InvoiceNumber},
     pdfkeywords={},
     pdfproducer={Latex with hyperref},
     pdfcreator={pdflatex},
@@ -12,7 +12,7 @@
     citecolor=black,
     filecolor=black,
     urlcolor=black]{hyperref}
-    
+
 \geometry{verbose,tmargin=4em,bmargin=8em,lmargin=6em,rmargin=6em}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
@@ -21,66 +21,104 @@
 \pagestyle{fancy}
 \setlength{\parindent}{0pt}
 
+
 \renewcommand{\headrulewidth}{0pt}
-\cfoot{
+
+
+% \fancyhead[L]{
+% 	\CompanyContactMinipage
+% }
+% \fancyhead[C]{
+% 	\InvoiceTitle
+% }
+% \fancyhead[R]{
+% 	\#\InvoiceNumber \\
+% 	\InvoiceDate
+% }
+
+% ------------------------------------------------------------------------------
+%	Definition of the footer
+% ------------------------------------------------------------------------------
+\renewcommand{\footrulewidth}{0.5pt}
+
+\fancyfoot[L]{
+	Facture \\
+	\#\InvoiceNumber \\
+	\InvoiceDate
+}
+
+\fancyfoot[C]{
 	\small{
-		\Denomination \\
-		Téléphone: \Telephone ~--~ E-mail : \href{mailto:\Email}{\texttt{\Email}}\\
-		SIRET \Siret ~--~ Code NAF \NAF}\\
-    \tiny{
-			\vspace{1.2em}
-			Dispensé d'immatriculation au registre du commerce et des sociétés et au répertoire des métiers
+		\CompanyName \\
+		Téléphone: \CompanyPhone ~--~ E-mail : \href{mailto:\CompanyEmail}{\texttt{\CompanyEmail}}\\
+		SIRET \CompanySiret ~--~ Code APE \CompanyAPE}\\
+	\tiny{
+		\vspace{1.2em}
+		Dispensé d'immatriculation au registre du commerce et des sociétés et au répertoire des métiers
 	}
 }
+
+\fancyfoot[R]{
+	~\\
+	\thepage / \pageref{LastPage}
+}
+
+% ##############################################################################
+% ##############################################################################
+%	Document
+% ##############################################################################
 
 \begin{document}
 
 
+% ------------------------------------------------------------------------------
+%	Generate the invoice header
+% ------------------------------------------------------------------------------
 \makeheader{}
 
-\hspace*{10.5cm}
-\begin{infoSection}
-	\infoBox{Client}{\textbf{\ClientNom} \\
-	\ClientAdresse}
-\end{infoSection}
 
-\hspace*{10.5cm}
-\FactureLieu, le \today
-
-~\\~\\
-
-\textbf{Objet : \FactureObjet \\}
-
-\textnormal{\FactureDescr}
-\vspace{10mm}
-
-\begin{center}
-	\begin{tabular}{lrrr}
-		\textbf{\itemizationHeaderStyle Désignation ~~~~~~}	& \textbf{\itemizationHeaderStyle Prix unitaire}	& \textbf{\itemizationHeaderStyle Quantité}	& \textbf{\itemizationHeaderStyle Montant (EUR)}	\\
-		\midrule
-		\AfficheResultat{}
-	\end{tabular}
-\end{center}
-
-%~\\
-\vspace{30mm}
-
-\ifthenelse{\equal{\FactureAcquittee}{oui}}{
-	Facture acquittée.
+% ------------------------------------------------------------------------------
+%	Description of the invoice content
+% ------------------------------------------------------------------------------
+% ~\\
+\ifdef{\InvoiceSubject}{
+	\textbf{Objet : \InvoiceSubject \\}
 }{
-
-	À régler par chèque ou par virement bancaire :
-
-	\begin{center}
-		\begin{tabular}{|c c c c|}
-			\midrule 	\itemizationHeaderStyle \textbf{Code banque}	& \itemizationHeaderStyle \textbf{Code guichet}	& \itemizationHeaderStyle \textbf{Nº de Compte}		& \itemizationHeaderStyle \textbf{Clé RIB}	\\
-					\texttt{\CodeBanque}					& \texttt{\CodeGuichet}		 			& \texttt{\NumCompte}				& \texttt{\CleRIB}				\\
-			\midrule 	\itemizationHeaderStyle \textbf{IBAN Nº}		& \multicolumn{3}{|l|}{ \texttt{\IBAN} } 		\\
-			\midrule 	\itemizationHeaderStyle \textbf{Code BIC}		& \multicolumn{3}{|l|}{ \texttt{\BIC} } 		\\
-			\midrule
-		\end{tabular}
-	\end{center}
-
+	% N/A
 }
+
+% \textnormal{\InvoiceComplementaryInfos}
+\ifdef{\InvoiceDetails}{
+	\InvoiceDetails
+}{
+	% N/A
+}
+
+
+% ------------------------------------------------------------------------------
+%	Generate the invoice listing
+% ------------------------------------------------------------------------------
+% \vspace{10mm}
+
+\ProductsTable{}
+\InvoiceComplementaryInfos
+
+
+% ------------------------------------------------------------------------------
+%	Insert payment conditions
+% ------------------------------------------------------------------------------
+
+% Fill all the available vertical space
+\vfill
+\vfill
+% \hrulefill
+\doublerulefill
+\vspace{1em}
+
+\PaymentConditions
+
+% \vspace{1em}
+% \doublerulefill
+
 
 \end{document}
