--- a/.input/facture_header.tex
+++ b/.input/facture_header.tex
@@ -13,9 +13,11 @@
 \usepackage{booktabs}
 
 \usepackage{adjustbox}
+% \usepackage{afterpage}
 \usepackage{booktabs}
 \usepackage{etoolbox}
 \usepackage{eurosym}
+\usepackage{everypage} 	%use this package to get the "on-every-page-do-this-Hook" below
 \usepackage{lastpage}
 \usepackage{layouts}
 % \usepackage{showframe}   %% just for demo
