--- a/.input/utils.tex
+++ b/.input/utils.tex
@@ -1,7 +1,6 @@
 
-% Configure style for custom doubled line
+%%  @brief  Configure style for custom doubled line.
 \newcommand*{\doublerule}{\hrule width \hsize height 1pt \kern 0.5mm \hrule width \hsize height 2pt}
-\newcommand{\CmdTst}{azertyuiop}
 
-% Configure function to fill line with doubled line
+%%  @brief  Configure function to fill line with doubled line.
 \newcommand\doublerulefill{\leavevmode\leaders\vbox{\hrule width .1pt\kern1pt\hrule}\hfill\kern0pt }
