--- a/FactureDemo.tex
+++ b/FactureDemo.tex
@@ -1,9 +1,12 @@
 \input{.input/facture_header.tex}
 
+
+% ------------------------------------------------------------------------------
+% Informations sur l'entreprise emettrice
+% ------------------------------------------------------------------------------
 \input{.input/company_infos.tex}
 
 
-%%%
 
 % ------------------------------------------------------------------------------
 % Désignation facture
@@ -85,39 +88,6 @@
 \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
 \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
 \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
-% \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
 
 
 
