Renamed the directory containing template sources.

--- a/factures/DemoFacture.tex
+++ b/factures/DemoFacture.tex
@@ -1,10 +1,10 @@
-\input{.input/facture_header.tex}
+\input{template/facture_header.tex}
 
 
 % ------------------------------------------------------------------------------
 % Informations sur l'entreprise emettrice
 % ------------------------------------------------------------------------------
-\input{.input/company_infos.tex}
+\input{template/company_infos.tex}
 
 
 
@@ -99,4 +99,4 @@
 
 
 
-\input{.input/facture_document.tex}
+\input{template/facture_document.tex}
