--- a/template/facture_header.tex
+++ b/template/facture_header.tex
@@ -29,8 +29,8 @@
 \definecolor{subduedColor}{rgb}{0.45,0.45,0.45}% dark grey
 
 
-\input{.input/style.tex}
-\input{.input/utils.tex}
+\input{template/style.tex}
+\input{template/utils.tex}
 
 
 %% Taux de la TVA
