Changed geometry management & style.

--- a/template/facture_document.tex
+++ b/template/facture_document.tex
@@ -23,26 +23,47 @@
 
 \thispagestyle{pagestyle_firstpage}
 
-%%  Default geometry
-\newgeometry{
-	tmargin=2cm,
-	bmargin=3cm,
-	lmargin=2cm,
-	rmargin=2cm
-}
+% %  Géometrie page de garde
+% \newgeometry{
+%     tmargin=1cm,
+%     bmargin=3cm,
+%     lmargin=2cm,
+%     rmargin=2cm
+% }
 
-%%  Géometrie page de garde
-\newgeometry{
-    tmargin=1cm,
-    bmargin=3cm,
-    lmargin=2cm,
-    rmargin=2cm
-}
+% %%  Default geometry
+% \newgeometry{
+% 	tmargin=2cm,
+% 	bmargin=3cm,
+% 	lmargin=2cm,
+% 	rmargin=2cm
+% }
 
 %%  Trick to reset geometry on second page;
 %%  See https://tex.stackexchange.com/a/478566/166035
 %%  This line registers the reset-hook:
-\AddEverypageHook{\ifnum\value{page}=2\restoregeometry\else\fi}
+% \AddEverypageHook{
+%     \ifnum\value{page}=1
+%         %%  Géometrie page de garde
+%         \newgeometry{
+%             a4paper,
+%             tmargin=1cm,
+%             bmargin=3cm,
+%             lmargin=2cm,
+%             rmargin=2cm
+%         }
+%         % \setlength{\textheight}{\paperheight}
+%         % \addtolength{\textheight}{ - 4cm }
+%     \else
+%         % %%  Default geometry
+%         % \newgeometry{
+%         %     tmargin=3cm,
+%         %     bmargin=3cm,
+%         %     lmargin=2cm,
+%         %     rmargin=2cm
+%         % }
+%     \fi
+% }
 
 
 % ------------------------------------------------------------------------------
@@ -85,13 +106,17 @@
 % Fill all the available vertical space
 \vfill
 \vfill
-% \hrulefill
-\doublerulefill
-\vspace{1em}
+\begin{minipage}{\textwidth}
+    % \hrulefill
+    \doublerulefill
+    \vspace{1em}
 
-\PaymentConditions
+    \PaymentConditions
 
-% \vspace{1em}
-% \doublerulefill
+    \vspace{1em}
+    \doublerulefill
+\end{minipage}
+
+
 
 \end{document}
