--- a/template/facture_header.tex
+++ b/template/facture_header.tex
@@ -7,7 +7,6 @@
 \usepackage[a4paper]{geometry}
 \usepackage{units}
 \usepackage{graphicx}
-\usepackage{fancyhdr}
 \usepackage{fp}
 \usepackage{soul}
 
@@ -18,7 +17,6 @@
 \usepackage{everypage} 	%use this package to get the "on-every-page-do-this-Hook" below
 \usepackage{lastpage}
 \usepackage{layouts}
-% \usepackage{showframe}  %%< Useful when working on geometry.
 
 
 \usepackage{ltablex} % Imports tabularx
@@ -29,6 +27,7 @@
 \definecolor{subduedColor}{rgb}{0.45,0.45,0.45}% dark grey
 
 
+\input{template/geometry_default.tex}
 \input{template/style.tex}
 \input{template/utils.tex}
 
