--- a/factures/DemoFacture.tex
+++ b/factures/DemoFacture.tex
@@ -1,6 +1,3 @@
-\input{template/facture_header.tex}
-
-
 % ------------------------------------------------------------------------------
 % Informations sur l'entreprise emettrice
 % ------------------------------------------------------------------------------
@@ -61,9 +58,16 @@
 }
 
 
+
 % ------------------------------------------------------------------------------
 % Liste des produits facturés : Désignation, quantité, prix unitaire HT
 % ------------------------------------------------------------------------------
+
+% This input has to be here as it both needs some definitions of company/client
+% infos and also defines elements needed in the following product lines.
+\input{template/facture_header.tex}
+
+
 \ProductAdd	{Élement} {1} {1337}
 \ProductAdd	{Autre élement} {42} {4.04}
 \ProductAdd	{Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.} {45} {418}
@@ -88,6 +92,9 @@
 \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
 \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
 \ProductAdd	{This is just a test line to test long invoices.}{1}{0}
+
+\ProductAddWithDetails	{This is to test detailed product line.}{1}{2}{This is the details subsection.}
+\ProductAddWithDetails	{This is to test another detailed product line.}{10}{20}{This is another details subsection.}
 
 
 
