Added a signature area.

--- a/template/facture_document.tex
+++ b/template/facture_document.tex
@@ -114,4 +114,11 @@
 \ProductsDetailsSections
 
 
+% ------------------------------------------------------------------------------
+%	Insert visas area
+% ------------------------------------------------------------------------------
+
+\signatureZone
+
+
 \end{document}
