--- a/template/facture_header.tex
+++ b/template/facture_header.tex
@@ -44,6 +44,7 @@
 \input{template/geometry_default.tex}
 \input{template/style.tex}
 \input{template/utils.tex}
+\input{template/utils/signature.tex}
 
 
 %% Taux de la TVA
