Improved geometry/style.

--- a/template/facture_header.tex
+++ b/template/facture_header.tex
@@ -14,7 +14,7 @@
 \usepackage{booktabs}
 \usepackage{etoolbox}
 \usepackage{eurosym}
-\usepackage{everypage} 	%use this package to get the "on-every-page-do-this-Hook" below
+% \usepackage{everypage} 	%use this package to get the "on-every-page-do-this-Hook" below
 \usepackage[plainpages=false,
     pdfcenterwindow=true,
     pdftoolbar=false,
