--- a/template/geometry_default.tex
+++ b/template/geometry_default.tex
@@ -6,7 +6,7 @@
 \setlength{\geometryMarginTop}{3cm}
 
 \newlength{\geometryMarginBottom}
-\setlength{\geometryMarginBottom}{2cm}
+\setlength{\geometryMarginBottom}{3cm}
 
 \newlength{\geometryMarginLeft}
 \setlength{\geometryMarginLeft}{2cm}
@@ -21,7 +21,7 @@
 
 %%  Default geometry
 \geometry{
-	verbose,
+	% verbose,
 	tmargin=\geometryMarginTop,
 	bmargin=\geometryMarginBottom,
 	lmargin=\geometryMarginLeft,
@@ -78,6 +78,6 @@
 %%  11 - Vertical offset between bottom of text body and bottom of footer
 \newlength{\geometryFootSkip}
 \setlength{\geometryFootSkip}{\geometryMarginBottom}
-\addtolength{\geometryFootSkip}{- 5mm}
+% \addtolength{\geometryFootSkip}{- 5mm}
 \setlength{\footskip}{\geometryFootSkip}
 % \setlength{\footskip}{- \geometryMarginBottom}
