--- a/template/style.tex
+++ b/template/style.tex
@@ -1,12 +1,30 @@
 \usepackage{changepage}
 \usepackage{fancyhdr}
+\usepackage{titlesec}
 
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
+
+% Space between \paragraph titles (different from paragraphs!)
+% See https://tex.stackexchange.com/a/4896/166035
+% And https://tex.stackexchange.com/a/509643/166035
+\titlespacing*{\paragraph}{
+	% Left margin
+	0pt
+}{
+	% Space before (vertical)
+	0.5\baselineskip plus 1ex minus .2ex
+}{
+	% Space after (horizontal)
+	1em
+}
+
+% Space between paragraphs, with an hysteresis of "plus"/"minus" given values
+% \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
+
+% \setlength{\parindent}{0pt}
+
 
 % \thispagestyle{fancy}
 \pagestyle{fancy}
-\setlength{\parindent}{0pt}
 
 
 % ##############################################################################
@@ -102,7 +120,7 @@
 }
 
 
-\newcommand{\footerOffset}{- \geometryFootSkip}
+\newcommand{\footerOffset}{- \geometryFootSkip + 5mm}
 
 % \renewcommand{\footrulewidth}{0.5pt}
 \renewcommand{\footrulewidth}{1pt}
