Fixed build of demo invoice.

--- a/template/utils/signature.tex
+++ b/template/utils/signature.tex
@@ -4,6 +4,9 @@
 \newif\ifSignatureZone
 \SignatureZonetrue
 
+\def\CompanyRepresentativeName{}
+\def\CompanyRepresentativePosition{}
+
 % ##############################################################################
 % ##############################################################################
 %
